Revision history for GLPI agent

1.2 not yet released

core:
* better error reporting on internal http client error

inventory:
* Use uts.name for Proxmox lxc containers
* Support customized AnyDesk client as remote management inventory on unix/linux
* Backport of @xo4yecTb patch: NoLog option for megacli util fusioninventory/fusioninventory-agent#996
* Fix teamviewer remote_mgmt inventory regression introduced in previous version
* linux: Added flatpak softwares inventory support
* database inventory: support default credential to inventory SQL Server 2012 Express
* linux: Update drive inventory to also try FS related tools to get more information
* feat: Add OS installation date inventory support for unix/linux
* Fix linux SLES 15 Service Pack detection, thanks to ncharles@gh
* Avoid blocking until timeout for snap softwares inventory when snapd is unavailable
* Add new Acer monitor model support: V226HQL, X193HQ, V193W, v193, V203W, V223HQ,
  V193HQV, V276HL, B247Y, P1206P, P1203, P1283, X125H, H6517ABD, X128H, XGA PJ,
  P5260i, AL1716, AL1717, AL1917, AL1916W, K242HQL, V226HQL, SA240Y, V246HQL,
  V193L, V196L, V203H

remoteinventory:
* Fix: Support username for SSH access
* Fix: Use BatchMode option for SSH access to not request password
* Fix: Use Net::SSH2 for user/password authentication
* Upgrade packaging to request libssh2 & NetSSH2
* Optimize SSH inventory by trying to use Net::SSH2 by default
* Add --vardir option support to glpi-remote script

netdiscovery/netinventory:
* New feature: Support device storages with first use for Infortrend SAN inventory
  This feature requires GLPI 10 server-side and disks are integrated as components
* Fix: don't rescan config on each thread but share parent config to avoid threading
  crash on win32
* Enhance Qnap storage inventory
* Update HP LaserJet Pro MFP printer series support
* Fix case of NULL char malformed CDP connection SYSNAME preventing XML import

deploy: